--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ img{
 }
 .top-container{
   /* background-color: #CBF1F5; */
-  background-image: url('file:///C:/Web%20Development/try/img/Home%20background.png');
+  background-image: url('img/Home%20background.png');
   padding-top: 50px;
   padding-bottom: 50px;
   position: relative;
