--- a/1RESUME/form/styles.css
+++ b/1RESUME/form/styles.css
@@ -10,7 +10,7 @@ body {
   text-align: center;
   width: 100%;
   /* padding-bottom: 140%; */
-  background-image: url('Foster-Credentials/img/resumeform_backgroung.png');
+  background-image: url('../img/resumeform_backgroung.png');
   /* background-size: cover; */
 }
 
