--- a/2CV/form/styles.css
+++ b/2CV/form/styles.css
@@ -10,7 +10,7 @@ body {
   text-align: center;
   width: 100%;
   /* padding-bottom: 140%; */
-  background-image: url(file:///C:/Web%20Development/try/img/cvform_background.jpg);
+  background-image: url('https://github.com/Dark8203/Foster-Credentials/img/cvform_background.jpg');
   /* background-size: cover; */
 }
 
